add helper class for Base64